add login&register function

--- a/simpledu/templates/macros.html
+++ b/simpledu/templates/macros.html
@@ -16,8 +16,15 @@
             <label>{{ field()}} {{field.label.text}}</label> 
         </div>
         {% else %}
-        <div class='form-group'>
+        <!-- 当errors不为空，添加has-error类，输入框变成红色　 -->
+        <div class='form-group {% if field.errors %} has-error {% endif %}'>
             {{ field.label}} {{field(class='form-control')}} 
+            <!-- 当errors不为空,遍历显示每一个error -->
+            {% if field.errors %}
+                {% for error in field.errors %}
+                <span class='help-block'>{{ error }}</span>
+                {% endfor %}
+            {% endif %}
         </div>
         {% endif %}
     {% endfor%}
