--- a/simpledu/templates/base.html
+++ b/simpledu/templates/base.html
@@ -29,14 +29,35 @@
                                                                                                               <li><a href="#">直播</a></li>
                                                                                                                   </ul>
                                                                                                                       <ul class="nav navbar-nav navbar-right">       
-                                                                                                                          <li><a href="{{url_for('front.register')}}">注册</a></li>
+                                                                                                                          {% if not current_user.is_authenticated %}                                                                                                                         <li><a href="{{url_for('front.register')}}">注册</a></li>
                                                                                                                           <li><a href="{{url_for('front.login')}}">登录</a></li>
+                                                                                                                          {% else  %}
+                                                                                                                          <li class='dropdown'>
+                                                                                                                              <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>{{ current_user.username }}<span class='caret'></span></a> 
+                                                                                                                              <ul class='dropdown-menu'>
+                                                                                                                                  <li><a href='#'>个人主页</a></li> 
+                                                                                                                                  <li role='separator' class='divider'></li>
+               <li><a href='#'>退出登录</a></li>                                                                                                                 </ul>
+                                                                                                                            
+                                                                                                                          </li>
+                                                                                                                          {% endif %}
+
                                                                                                                                               </ul>
                                                                                                                                                   </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
       </nav>
 
       <div class="container">
+          {% with messages = get_flashed_messages(with_categories=true) %} 
+          {% if messages %}
+          {% for category, message in messages %}
+          <div class='alert alert-{{ category }} alert-dismissible' role='alert'>
+              <button type="button" class='close' data-dismiss='alert' aria-label='Close'><span aria-hidden='true'>&times;</span></button>
+              {{ message }}
+          </div> 
+          {% endfor %}
+          {% endif %}
+          {% endwith %}
             {% block body %}{% endblock %}
               {% block footer %}{% endblock %}
       </div>
