add course&chapter model

--- a/simpledu/templates/user.html
+++ b/simpledu/templates/user.html
@@ -6,7 +6,7 @@
  <h1>Username: {{user.username}}</h1>
  {% endfor%}
  <h1>published Course :</h1>
- {% for course in publish_courses%}
+ {% for course in user.publish_courses%}
  
  <h1>ID: {{course.name}}</h1>
  {% endfor %}
