modify course detail.html and chapter

--- a/simpledu/templates/index.html
+++ b/simpledu/templates/index.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}    
 {% block title %}Home{% endblock %}
 {% block body %}
+<div class='row'>
     {% for course in courses %}
-        <h1>{{ course.name}} - {{course.author.username}}</h1>
+    <div class='col-sm-6 col-md-4 course'>
+        <div class='thumbnail'>
+            <a href='{{ course.url }}' target='_blank'>
+                <img src='{{ course.image_url }}' alt='课程'>
+                <div class='caption'>
+                    <h4 class='course__name'>{{ course.name }}</h4>
+                    <p class='course__description'>{{ course.description }}</p>
+                </div>
+            </a> 
+        </div> 
+    </div>
     {% endfor %}
+</div>
 {% endblock %}    
