--- a/simpledu/static/main.css
+++ b/simpledu/static/main.css
@@ -3,4 +3,15 @@
     margin: 0 auto;
 }
 
-# css style not load
+a,
+a:hover,
+a:visted {
+    text-decoration: none !important;
+}
+
+.course__name,
+.course__description{
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+}
