--- a/simpledu/templates/index.html
+++ b/simpledu/templates/index.html
@@ -1,19 +1,22 @@
-{% extends "base.html" %}    
+{% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block body %}
-<div class='row'>
-    {% for course in courses %}
-    <div class='col-sm-6 col-md-4 course'>
-        <div class='thumbnail'>
-            <a href='{{ course.url }}' target='_blank'>
-                <img src='{{ course.image_url }}' alt='课程'>
+<div class="row">
+    {% for course in courses  %}
+    <div class="col-sm-6 col-md-4 course">
+        <div class="thumbnail">
+            <a href="{{url_for('course.detail',course_id=course.id)}}" target='_blank'>
+                <img src="{{course.image_url}}" alt="课程" />
                 <div class='caption'>
-                    <h4 class='course__name'>{{ course.name }}</h4>
-                    <p class='course__description'>{{ course.description }}</p>
+                    <h3 class=course__name>{{course.name}}</h3>
+                    <p class=course__description>{{ course.description }}</p>
                 </div>
-            </a> 
-        </div> 
+            </a>
+        </div>
     </div>
+
+
     {% endfor %}
 </div>
-{% endblock %}    
+
+{% endblock %}
