--- a/simpledu/templates/base.html
+++ b/simpledu/templates/base.html
@@ -25,7 +25,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="/">课程<span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="{{url_for('front.index')}}">课程<span class="sr-only">(current)</span></a></li>
                             <li><a href="#">直播</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
