--- a/simpledu/templates/macros.html
+++ b/simpledu/templates/macros.html
@@ -30,3 +30,40 @@
     {% endfor%}
 </form>
 {% endmacro %}
+
+{% macro render_pagination(pagination,endpoint) %}
+
+<nav class='nav-pagination' aira-label='Page navigation'>
+    <ul class='pagination'>
+        <li {% if not pagination.has_prev %} class='disabled'{% endif %}>
+            <a href='{{url_for(endpoint, page=pagination.prev_num) if pagination.has_prev else '#'  }}' >
+                <span aria-hidden='true'>&laquo;</span>
+            </a> 
+        </li>
+
+        <!-- 渲染每个页数的按钮 -->
+        {% for page in pagination.iter_pages() %}
+            {% if page %}
+                {% if page != pagination.page %}
+                <li><a href='{{ url_for(endpoint, page=page) }}'>{{page}}</a></li>
+                {% else %}
+                <!-- 如果页数是当前页，设置为选中状态　-->
+                <li class='active'>
+                    <a href='#'>{{page}} <span class='sr-only'>(current)</span></a> 
+                </li>
+                {% endif %}
+            {% else %}
+                <span class='ellipsis'>...</span>
+            {% endif %}
+        {% endfor %}
+        <!-- 连接到下一页的右箭头(&raquo;)，若没有下一页设为 disable 状态 -->     
+        
+        <li {% if not pagination.has_next %} class='disabled' {% endif %}>
+            <a href='{{url_for(endpoint, page=pagination.next_num) if pagination.has_next else '#'}} ' aria-label='Next'>
+                <span aria-hidden='true'>&raquo;</span>
+            </a> 
+        </li>
+    </ul>
+</nav>
+{% endmacro%}
+
