--- a/simpledu/static/main.css
+++ b/simpledu/static/main.css
@@ -5,8 +5,8 @@
 
 a,
 a:hover,
-a:visted {
-    text-decoration: none !important;
+a:visited {
+    text-decoration: none !important ;
 }
 
 .course__name,
