add admin-create & edit

--- a/simpledu/templates/admin/courses.html
+++ b/simpledu/templates/admin/courses.html
@@ -22,16 +22,23 @@ Admin - courses
             <td>{{ course.id }}</td>
             <td>{{ course.name }}</td>
             <td>{{ course.author.username }}</td>
+            <td>
+        <!-- 编辑 删除 -->
+        <div class='btn-group' role='group'>
+            <a href='{{url_for('admin.create_course')}}' type='button' class='btn btn-default' title='编辑'>
+                <span class='glyphicon glyphicon-pencil' title='编辑' aria-hidden='true'></span>
+            </a> 
+            <a href='' type='button' class='btn btn-default' title='删除'>
+                <span class='glyphicon glyphicon-trash' title='删除' aria-hidden='true'></span>
+            </a> 
+        </div>
+            </td>
         </tr>
-        
         {% endfor %}
-        
-
     </tbody>
-
-    <tr>
-
-    </tr>
-    </th>
 </table>
+
+<!-- 使用 macro 渲染页面 -->
+{{ render_pagination(pagination,'admin.courses')}}
+
 {% endblock %}
