add edit & delete function

--- a/simpledu/templates/admin/courses.html
+++ b/simpledu/templates/admin/courses.html
@@ -25,10 +25,10 @@ Admin - courses
             <td>
         <!-- 编辑 删除 -->
         <div class='btn-group' role='group'>
-            <a href='{{url_for('admin.create_course')}}' type='button' class='btn btn-default' title='编辑'>
+            <a href='{{ url_for('admin.edit_course', course_id=course.id) }}' type='button' class='btn btn-default' title='编辑'>
                 <span class='glyphicon glyphicon-pencil' title='编辑' aria-hidden='true'></span>
             </a> 
-            <a href='' type='button' class='btn btn-default' title='删除'>
+            <a href='{{ url_for('admin.delete_course', course_id=course.id)}}' type='button' class='btn btn-default' title='删除'>
                 <span class='glyphicon glyphicon-trash' title='删除' aria-hidden='true'></span>
             </a> 
         </div>
