--- a/simpledu/templates/base.html
+++ b/simpledu/templates/base.html
@@ -37,7 +37,7 @@
                         <li><a href="{{url_for('front.login')}}">登录</a></li>
                         {% else  %}
                         <li class='dropdown'>
-                            <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'>{{ current_user.username }}<span class='caret'></span></a>
+                            <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false'><span id='username'>{{ current_user.username }}</span><span class='caret'></span></a>
                             <ul class='dropdown-menu'>
                                 <li><a href='#'>个人主页</a></li>
                                 <li role='separator' class='divider'></li>
@@ -65,7 +65,7 @@
 
             {% block head_css %}
             <!-- css 文件 -->
-            <link rel="stylesheet" href="static/main.css" type='text/css' >
+            <link rel="stylesheet" href="/static/main.css" type='text/css' >
 
             <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
             {% endblock %}
