--- a/simpledu/templates/admin/index.html
+++ b/simpledu/templates/admin/index.html
@@ -9,18 +9,25 @@ Admin
         <h4>管理</h4>
         <div class='list-group'>
 
-            <a href='#' class='list-group-item'>用户</a>
+            <a href='{{url_for('admin.users')}}' class='list-group-item'>用户</a>
             <a href='{{url_for( 'admin.courses') }}' class='list-group-item'>课程</a>
         </div>
 
         {% block operation %}
-        <a href='{{ url_for('admin.create_course')}} '>
-            <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>添加课程
-        </a>
+            <a href='{{ url_for('admin.create_course')}} ' type='button' class='btn btn-primary'>
+                <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>
+                添加课程
+            </a>
+            <p></p>
+            <a href='{{url_for('admin.create_user')}}' class='btn btn-primary'>
+                <span class='glyphicon glyphicon-plus' aria-hidden='true'></span>
+                添加用户
+            </a>
         {% endblock %}
     </div>
 
     <div class='col-md-9'>
+        <h4>管理数据展示</h4>
         {% block admin %}{% endblock %}
     </div>
 </div>
