--- a/simpledu/templates/base.html
+++ b/simpledu/templates/base.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="{{url_for('front.index')}}">课程<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">直播</a></li>
+                        <li><a href="{{url_for('live.index')}}">直播</a></li>
                         {% if current_user.is_authenticated and current_user.is_admin %}
                         <li><a href='{{url_for('admin.index')}}'>控制台</a></li>
                         {% endif %}
