--- a/simpledu/templates/live/a.html
+++ b/simpledu/templates/live/a.html
@@ -1,1 +1,65 @@
 <h1>hello</h1>
+
+<!--
+{% block head_css %}
+{{ super() }}
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+
+<style>
+
+#message-box{
+    background-color:"eee";
+    font-size:15px;
+    padding:3px 0 0 5px;
+    width:100%;
+    height:455px;
+    border-radius:3px;
+    margin-bottom:10px;
+    overflow:scroll;
+}
+</style>
+{% endblock %}
+
+{% block body %}
+<div class='col-md-3'>
+    <div id='message-box'></div>
+    <div class='input-group' id='message-form'>
+        <input type='text' class='form-control'>
+        <span class='input-group-btn'>
+            <button class='btn brn-primary' type='button'>发言</button>
+        </span>
+    </div>
+</div>
+
+<script>
+
+var inbox = new WebSocket('ws://' + location.host + '/ws/recv')
+
+var outbox = new WebSocket('ws://'+ location.host + '/ws/send') 
+
+
+$('#message-form button').on('click', function(event){
+    text = $('#message-form input').val();
+    username = $('#username').text()
+        outbox.send(JSON.stringify({username:username, text:text }))
+        $('#message-form input').val('');
+
+});
+
+inbox.onmessage = function(message){
+    console.log(message);
+    var data = JSON.parse(message.data);
+    $('#message-box').append('<p><b>'+ data.username + '</b>'+':'+data.text+'</p>');
+};
+
+inbox.onclose = function(){
+    this.inbox = new WebSocket('ws://'+location.host+'/ws/recv')
+};
+
+outbox.onclose = function(){
+    this.outbox = new WebSocket('ws://'+location.host+'/ws/send')
+}
+</script>
+{% endblock %}
+-->
