--- a/simpledu/templates/live/index.html
+++ b/simpledu/templates/live/index.html
@@ -1,63 +1,49 @@
 {% extends 'base.html' %}
 
-{% block head_css %}
-{{ super() }}
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-
-<style>
-
-#message-box{
-    background-color:"eee";
-    font-size:15px;
-    padding:3px 0 0 5px;
-    width:100%;
-    height:455px;
-    border-radius:3px;
-    margin-bottom:10px;
-    overflow:scroll;
-}
-</style>
+{% block title %}
+Live
 {% endblock %}
 
 {% block body %}
-<div class='col-md-3'>
-    <div id='message-box'></div>
-    <div class='input-group' id='message-form'>
-        <input type='text' class='form-control'>
-        <span class='input-group-btn'>
-            <button class='btn brn-primary' type='button'>发言</button>
-        </span>
+<div class='row'>
+    <div class='col-md-9'>
+        <video id='videoElement' width='100%' height='500px' controls='controls'></video> 
     </div>
+    <div class='col-md-3'></div>
 </div>
+{% endblock %}
+
+{% block tail_js %}
+{{ super() }}
+<script src='https://cdnjs.cloudflare.com/ajax/libs/flv.js/1.3.3/flv.min.js'></script>
 
 <script>
+if (flvjs.isSupported()){
+    // 获取video标签 
+    var videoElement = document.getElementById('videoElement');
+    // 初始化播放器
+    var flvPlayer = flvjs.createPlayer({
+        // 流的类型
+        type:'flv' ,
+        // 是否是直播
+        isLive:true,
+        // 直播流地址
+        //url:'http://itshiyan.com/AppName/StreamName.flv?auth_key=1508294137-0-0-c12501a4ebb28d565a95187075cc5ee0
 
-var inbox = new WebSocket('ws://' + location.host + '/ws/recv')
+        // 随意找
+       // url:'https://js.live-play.acgvideo.com/live-js/480483/live_274790477_3174609.flv?wsSecret=def4974704ae852cf40653bd0bd50117&wsTime=1525687942' 
+        url:'https://cn-nmghhht-cu-live-03.live-play.acgvideo.com/live-bvc/346069/live_7905675_8045649.flv?expires=1525855676&ssig=JzhB7TC8TsMrw_yvQ-t2eA&oi=3395958394'
+    });
 
-var outbox = new WebSocket('ws://'+ location.host + '/ws/send') 
-
-
-$('#message-form button').on('click', function(event){
-    text = $('#message-form input').val();
-    username = $('#username').text()
-        outbox.send(JSON.stringify({username:username, text:text }))
-        $('#message-form input').val('');
-
-});
-
-inbox.onmessage = function(message){
-    console.log(message);
-    var data = JSON.parse(message.data);
-    $('#message-box').append('<p><b>'+ data.username + '</b>'+':'+data.text+'</p>');
-};
-
-inbox.onclose = function(){
-    this.inbox = new WebSocket('ws://'+location.host+'/ws/recv')
-};
-
-outbox.onclose = function(){
-    this.outbox = new WebSocket('ws://'+location.host+'/ws/send')
+    flvPlayer.attachMediaElement(videoElement)
+    flvPlayer.load();
+    
+    // 播放直播
+    flvPlayer.play()
 }
 </script>
 {% endblock %}
+
+
+
+
