--- a/simpledu/templates/live/index.html
+++ b/simpledu/templates/live/index.html
@@ -6,6 +6,8 @@ Live
 
 {% block head_css %}
 {{ super() }}
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs
+/jquery/1.4.0/jquery.min.js"></script>
 
 <style>
 #message-box{
@@ -40,19 +42,11 @@ Live
     </div>
 </div>
 
-<script>
-    var inbox = new WebSocket('ws://' + location.host + '/ws/recv');
-
-    var outbox = new WebSocket('ws://' + location.host + '/ws/send')
-
-</script>
-
 {% endblock %}
 
 {% block tail_js %}
 {{ super() }}
 <script src='https://cdnjs.cloudflare.com/ajax/libs/flv.js/1.3.3/flv.min.js'></script>
-
 <script>
 if (flvjs.isSupported()){
     // 获取video标签
@@ -78,6 +72,39 @@ if (flvjs.isSupported()){
     flvPlayer.play()
 }
 </script>
+
+<script>
+var inbox = new WebSocket('ws://' + location.host + '/ws/recv');
+
+var outbox = new WebSocket('ws://' + location.host + '/ws/send')
+
+$('#message-form button').on('click', function(event){
+    // 获取用户发言内容
+    text = $('#message-form input').val();
+    // 获取用户名
+    username = $('#username').text();
+    // 发送数据到 websocket 的后台处理接口
+    outbox.send(JSON.stringify({ username:username, text:text}));
+    // 提交后,输入框为空
+    $('#message-form input').val('');
+})
+
+inbox.onmessage = function(message){
+    console.log(message);
+    var data = JSON.parse(message.data);
+    $('#message-box').append('<p><b>' + data.username + '</b>' + ': ' + data.text + '</p>');
+};
+
+inbox.onclose = function(){
+    this.inbox = new WebSocket('ws://'+ location.host + '/ws/recv');
+};
+
+outbox.onclose = function(){
+    this.outbox = new WebSocket('ws://'+ location.host + 'ws/send');
+};
+</script>
+
+
 {% endblock %}
 
 
