--- a/simpledu/templates/admin/index.html
+++ b/simpledu/templates/admin/index.html
@@ -12,6 +12,7 @@ Admin
             <a href='{{url_for('admin.users')}}' class='list-group-item'>用户</a>
             <a href='{{url_for( 'admin.courses') }}' class='list-group-item'>课程</a>
             <a href='{{url_for('admin.live')}}' class='list-group-item'>直播</a>
+            <a href='{{url_for('admin.send_message')}}' class='list-group-item'>系统消息</a>
         </div>
 
         {% block operation %}
