--- a/simpledu/templates/course/detail.html
+++ b/simpledu/templates/course/detail.html
@@ -14,24 +14,25 @@ Course - {{ course.name }}
 <!-- chapter show list -->
 <div class="row">
     <div class="col-md-8">
-            <ul class='list-group'>
-                {% for chapter in course.chapters  %}
-                <a href="{{ url_for('course.chapter', course_id= course.id, chapter_id = chapter.id) }}" class='list-group-item'>
+        <ul class='list-group'>
+            {% for chapter in course.chapters  %}
+            <a href="{{ url_for('course.chapter', course_id= course.id, chapter_id=chapter.id) }}" class='list-group-item'>
                 <span class='glyphicon glyphicon-play-circle' aria-hidden='true'></span>
                 <span>{{ chapter.name }}&nbsp;({{ chapter.vedio_duration }})</span>
-                </a>
-                {% endfor %}
-            </ul>
+            </a>
+            {% endfor %}
+        </ul>
     </div>
     <div class='col-md-4'>
-        <h3>课程教师</h3> 
+        <h3>课程教师</h3>
         <div class='media-left'>
+
             <a href='#'>
-                <img class='media-object' src='' alt='64x64'/>
-            </a> 
+                <img class='media-object' src= '{{ course.author.img }}' height=64px width=64px alt='64x64'/>
+            </a>
         </div>
         <div class='media-body'>
-            <h4 class='media-heading'>{{ course.author.username }}</h4> 
+            <h4 class='media-heading'>{{ course.author.username }}</h4>
         </div>
 
     </div>
